--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ body{
   margin: 60px 90px 0px 90px;
   align-items: center;
   background-color: #f2eeff;
+  display: flex;
+  justify-content: center;
 }
 h1 {
-  padding: 13px 422px 14px 422px;
   font-size: 40px;
   line-height: 48px;
   text-align: center;
@@ -33,8 +34,9 @@ p {
 }
 .box2 {
   margin-left: 42px;
-  padding: 131px 33px 131px 40px;
   text-align: center;
+  display:flex;
+  justify-content: center;
 }
 .box3 {
   margin: 71px 0px 0px 77px;
@@ -49,6 +51,8 @@ p {
   height: 72px;
   font-size: 30px;
   line-height: 100%;
+  /*common to box 1*/
+  align-self: center;
 }
 .commonboxsize{
   width: 257px;
